// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSidebar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium"
    >
      <div
        class="PageSidebar-spacer"
      />
    </div>
  </div>
</div>
`;

exports[`PageSidebar with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium"
    >
      <div
        class="PageSidebar-spacer"
      />
      <ul
        class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`PageSidebar with one normal and one bottom menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column PageSidebar-root PageSidebar-light PageSidebar-medium"
    >
      <div
        class="PageSidebar-spacer"
      />
      <ul
        class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
      <ul
        class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root PicassoSidebarMenu-bottom"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
